2000-08-13  Ulrich Drepper  <drepper@redhat.com>

	* nss/Makefile: Remove rules to build and distribute nss_db.

	* sysdeps/generic/alphasort64.c: Remove unnecessary versioning.
	* sysdeps/generic/scandir64.c: Likewise.
	* sysdeps/generic/versionsort64.c: Likewise.

2000-08-13  Ulrich Drepper  <drepper@redhat.com>
	    Benjamin Koznik  <bkoz@redhat.com>

	* libio/fileops.c: Merge with libstdc++-v3.
	* libio/genops.c: Likewise.
	* libio/iofclose.c: Likewise.
	* libio/iofopen.c: Likewise.
	* libio/iofwide.c: Likewise.
	* libio/libio.h: Likewise.
	* libio/libioP.h: Likewise.
	* libio/stdfiles.c: Likewise.
	* libio/stdio.c: Likewise.
	* libio/wfileops.c: Likewise.
	* libio/wgenops.c: Likewise.

	* libio/Versions: Export functions needed by libstdc++-v3 in GLIBC_2.2.

2000-08-12  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/localedef.c: Implement --prefix option to allow
	writing in standard places of alternative install directories.

	* posix/regex.c (compile_range): Implement collation sequence
	handling for glibc.  Use simple character ordering otherwise and
	not strcoll.

2000-08-12  Mark Kettenis  <kettenis@gnu.org>

	* sysdeps/generic/scandir64.c: Include <dirent.h>.

2000-08-12  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h: Handle
	__USE_FILE_OFFSET64 correctly for locking.
	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h: Likewise.

2000-08-12  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/kernel-features.h (__ASSUME_FCNTL64):
	Define for 2.4.1 on sparc as well.
	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h: Fill in correct values
	for F_GETLK64, F_SETLK64, and F_SETLKW64.
	* sysdeps/unix/sysv/linux/sparc/sparc32/fcntl.c: New file.
	* sysdeps/unix/sysv/linux/sparc/sparc32/lockf64.c: New file.

2000-08-12  Ulrich Drepper  <drepper@redhat.com>

	* io/fts.c (fts_stat): Recognize DT_WHT only if S_IFWHT is also
	defined.

2000-08-12  Andreas Jaeger  <aj@suse.de>
